# chevren

./: .SRCINFO  .gitignore  GEMINI.md  Makefile  PKGBUILD  README-tr.md  README.md  chevren  chevren.install  chevren.lua  chevren_context.md  install.py  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  update-pkgbuild.yml
docs/: updates.json
extension/: background.js  content.js  manifest.json
extension/popup/: log.html  log.js  popup.html  popup.js
server/: Cargo.toml
server/src/: main.rs  mpv.rs  state.rs
server/src/routes/: cancel.rs  config_lang.rs  mod.rs  mpv_cmd.rs  open.rs  pipeline_status.rs  restart.rs  status.rs  subtitle.rs
server/systemd/: chevren-server.service
src/: cache.py  cli.py  config.py  pipeline.py
