[package]
name = "chevren-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chevren-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
anyhow = "1"
